--- a/rasterio/to_from_dfs2.ipynb
+++ b/rasterio/to_from_dfs2.ipynb
@@ -28,14 +28,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import rasterio as rio\n",
     "from rasterio.plot import show\n",
-    "from mikeio import Dfs2"
+    "from rasterio.transform import from_origin\n",
+    "from mikeio import Dfs2\n",
+    "from mikeio.eum import ItemInfo, EUMType"
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +78,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 30
     }
    ],
    "source": [
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +145,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 25
     }
    ],
    "source": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +166,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn2 = 'gebco_2020_n57.5_s55.0_w10.0_e13.0.dfs2'\n",
-    "dfs.write()"
+    "nx = ds.width\n",
+    "ny = ds.height\n",
+    "x0 = ds.bounds.left\n",
+    "y0 = ds.bounds.bottom\n",
+    "dx = (ds.bounds.right - ds.bounds.left)/(nx - 1)\n",
+    "dy = (ds.bounds.top - ds.bounds.bottom)/(ny - 1)\n",
+    "coordinate = ['LONG/LAT', x0, y0, 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\JEM\\Anaconda3\\lib\\site-packages\\mikeio\\dfs.py:223: UserWarning: No start time supplied. Using current time: 2021-03-15 16:49:48.993733 as start time.\n  warnings.warn(\nC:\\Users\\JEM\\Anaconda3\\lib\\site-packages\\mikeio\\dfs.py:236: UserWarning: No timestep supplied. Using 1s.\n  warnings.warn(\"No timestep supplied. Using 1s.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn2 = 'gebco_2020_n57.5_s55.0_w10.0_e13.0.dfs2'\n",
+    "items = [ItemInfo(\"Elevation\", EUMType.Total_Water_Depth)]\n",
+    "dfs.write(fn2,[dat],coordinate=coordinate, dx=dx, dy=dy, items=items)"
+   ]
+  },
+  {
+   "source": [
+    "## From Dfs2 to geoTIFF"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = Dfs2('gebco_sound.dfs2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datgrid = dfs.read()[0][0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(264, 216)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
+   "source": [
+    "datgrid.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proj = dfs._dfs.FileInfo.Projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx = dfs.shape[1]\n",
+    "ny = dfs.shape[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn3 = 'gebco_sound_output.tif'\n",
+    "with rio.open(\n",
+    "     fn3,\n",
+    "     'w',\n",
+    "     driver='GTiff',\n",
+    "     height=ny,\n",
+    "     width=nx,\n",
+    "     count=1,\n",
+    "     dtype=datgrid.dtype,\n",
+    "     crs='+proj=latlong',\n",
+    "     transform=from_origin(proj.Longitude, proj.Latitude, dfs.dx, dfs.dy)\n",
+    "     ) as dst:\n",
+    "        dst.write(np.flipud(datgrid), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
