--- a/rasterio/basic.ipynb
+++ b/rasterio/basic.ipynb
@@ -23,6 +23,15 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Basic rasterio stuff\n",
+    "\n",
+    "    conda install -c conda-forge rasterio\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
