--- a/optuna/01 basics.ipynb
+++ b/optuna/01 basics.ipynb
@@ -131,11 +131,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Sklearn"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -159,6 +159,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "rf = RandomForestRegressor() # default hyper-parameters\n",
     "rf.fit(X_train, y_train)\n",
@@ -215,11 +216,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "... let's do some more iterations"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -271,8 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd004089dccd669f5475382045dd9eff7870585234f8cdbd51ae6db76ccd1cd85e5",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
