Reuse random samples for clarity

--- a/probabilistic_forecast_evaluation/crps.ipynb
+++ b/probabilistic_forecast_evaluation/crps.ipynb
@@ -24,81 +24,94 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "!pip install properscoring"
+   ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: properscoring in c:\\users\\jan\\miniconda3\\lib\\site-packages (0.1)\nRequirement already satisfied: scipy in c:\\users\\jan\\miniconda3\\lib\\site-packages (from properscoring) (1.6.1)\nRequirement already satisfied: numpy in c:\\users\\jan\\miniconda3\\lib\\site-packages (from properscoring) (1.19.2)\n"
+      "Requirement already satisfied: properscoring in c:\\users\\jan\\miniconda3\\lib\\site-packages (0.1)\n",
+      "Requirement already satisfied: numpy in c:\\users\\jan\\miniconda3\\lib\\site-packages (from properscoring) (1.21.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\jan\\miniconda3\\lib\\site-packages (from properscoring) (1.6.1)\n"
      ]
     }
    ],
-   "source": [
-    "!pip install properscoring"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from ipywidgets import interact\n",
-    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import interact\r\n",
+    "import matplotlib.pyplot as plt\r\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "import properscoring\r\n",
+    "from scipy.stats import norm\r\n",
+    "\r\n",
+    "many_samples = np.random.normal(size=100)\r\n",
+    "\r\n",
+    "@interact\r\n",
+    "def crps_show(x=(-10.0,10.0), mu=(-10.0,10.0), sig=(0.1,10.0), n_member=(3,20)):\r\n",
+    "  \r\n",
+    "  xx = np.linspace(-20.0, 20.0, 200)\r\n",
+    "  y = norm.pdf(loc=mu,scale=sig,x=xx)\r\n",
+    "\r\n",
+    "  samples = mu + sig*many_samples[:n_member]\r\n",
+    "\r\n",
+    "  crps_g = properscoring.crps_gaussian(x=x, mu=mu, sig=sig)\r\n",
+    "  crps_e = properscoring.crps_ensemble(observations=x, forecasts=samples)\r\n",
+    "  mae = np.abs(mu-x)\r\n",
+    "\r\n",
+    "  textstr = '\\n'.join((\r\n",
+    "    r'$CRPS_g$ %.2f' % (crps_g, ),\r\n",
+    "    r'$CRPS_e$ %.2f' % (crps_e, ),\r\n",
+    "    r'$MAE$    %.2f' % (mae, )\r\n",
+    "  ))\r\n",
+    "\r\n",
+    "  fig, ax = plt.subplots(figsize=(8,4))\r\n",
+    "  props = dict(boxstyle='round', facecolor='beige')\r\n",
+    "  ax.text(1.02, 0.97, textstr, transform=ax.transAxes, fontsize=14,\r\n",
+    "        verticalalignment='top', bbox=props)\r\n",
+    "\r\n",
+    "  ax.plot(xx,y, label=\"Model\")\r\n",
+    "  ax.scatter( samples, np.zeros(len(samples)),label='Ensemble')\r\n",
+    "  ax.axvline(x,linestyle='dashed',label=\"Observation\")\r\n",
+    "  ax.legend(loc='upper left')"
+   ],
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "interactive(children=(FloatSlider(value=0.0, description='x', max=10.0, min=-10.0), FloatSlider(value=0.0, des…",
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.0, description='x', max=10.0, min=-10.0), FloatSlider(value=0.0, des…"
+      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9472f236a13a4084b10be4528f53bd1e"
+       "model_id": "0f29e7f6169849caab21dd65d85fee34"
       }
      },
      "metadata": {}
     }
    ],
-   "source": [
-    "import properscoring\n",
-    "from scipy.stats import norm\n",
-    "\n",
-    "@interact\n",
-    "def crps_show(x=(-10.0,10.0), mu=(-10.0,10.0), sig=(0.1,10.0), n_member=(3,20)):\n",
-    "  \n",
-    "  xx = np.linspace(-20.0, 20.0, 200)\n",
-    "  y = norm.pdf(loc=mu,scale=sig,x=xx)\n",
-    "\n",
-    "  samples = np.random.normal(loc=mu, scale=sig, size=n_member)\n",
-    "\n",
-    "  crps_g = properscoring.crps_gaussian(x=x, mu=mu, sig=sig)\n",
-    "  crps_e = properscoring.crps_ensemble(observations=x, forecasts=samples)\n",
-    "  mae = np.abs(mu-x)\n",
-    "\n",
-    "  textstr = '\\n'.join((\n",
-    "    r'$CRPS_g$ %.2f' % (crps_g, ),\n",
-    "    r'$CRPS_e$ %.2f' % (crps_e, ),\n",
-    "    r'$MAE$    %.2f' % (mae, )\n",
-    "  ))\n",
-    "\n",
-    "  fig, ax = plt.subplots(figsize=(8,4))\n",
-    "  props = dict(boxstyle='round', facecolor='beige')\n",
-    "  ax.text(1.02, 0.97, textstr, transform=ax.transAxes, fontsize=14,\n",
-    "        verticalalignment='top', bbox=props)\n",
-    "\n",
-    "  ax.plot(xx,y, label=\"Model\")\n",
-    "  ax.scatter( samples, np.zeros(len(samples)),label='Ensemble')\n",
-    "  ax.axvline(x,linestyle='dashed',label=\"Observation\")\n",
-    "  ax.legend(loc='upper left')"
-   ]
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ]
 }
