Parametrise delta for faster calculation of trade-off curve

--- a/cvxpy-datacleaning/data_cleaning.ipynb
+++ b/cvxpy-datacleaning/data_cleaning.ipynb
@@ -248,7 +248,11 @@
    "metadata": {},
    "source": [
     "### Calculate the trade-off curve between $\\| x-x_{noisy} \\|_2^2$ and $\\| Dx \\|_1$\n",
-    "This step solves the above optimisation problem for different values of delta - and might consume a bit of time."
+    "This step solves optimisation problem for different values of delta. The goal is to explore the trade-off curve between the objectives. This is the same as the Pareto frontier.\n",
+    "\n",
+    "delta is defined as a cvxpy.Parameter. This has the implication that we can loop over delta (to explore the trade-off) without (re-)building the entire optimisation problem each time. When delta is defined as a parameter, the optimisation problem is defined (and compiled) once, and only delta is replaced before each call to problem.solve().\n",
+    "\n",
+    "A Parameter is the only entity, which can be changed _after_ cvxpy has compiled the problem. "
    ]
   },
   {
@@ -260,19 +264,24 @@
    "outputs": [],
    "source": [
     "def calculate_tradeoff(delta_list):\n",
-    "    #  don't define x inside the loop because this is time-consuming for a large series - re-use instead\n",
-    "    x = cp.Variable((len(x_noisy),)) \n",
-    "    \n",
+    "            \n",
     "    # lists to pick up the two competing terms in the objective value, the objective value itself and the optimal x\n",
     "    sq_err = []\n",
     "    total_var = []\n",
     "    obj = []\n",
     "    x_opt = []\n",
+    "    \n",
+    "    #  don't define x inside the loop because this is time-consuming for a large series - re-use instead\n",
+    "    x = cp.Variable((len(x_noisy),)) \n",
+    "    delta = cp.Parameter(nonneg=True)\n",
+    "    \n",
+    "    cost = cp.sum(cp.square(x-x_noisy)) + delta*cp.tv(x)\n",
+    "    problem = cp.Problem(cp.Minimize(cost))\n",
     "\n",
-    "    for delta in delta_list:\n",
-    "        print(f'Solving optimisation with delta = {delta}')\n",
-    "        cost = cp.sum(cp.square(x-x_noisy)) + delta*cp.tv(x)\n",
-    "        problem = cp.Problem(cp.Minimize(cost))\n",
+    "    for d in delta_list:\n",
+    "        print(f'Solving optimisation with delta = {d}')\n",
+    "        delta.value = d\n",
+    "\n",
     "        problem.solve() #  solve using the default open-source solver\n",
     "        #problem.solve(solver=cp.MOSEK) #  solve using mosek. Requires a mosek license, and is approximately 4 times faster than the default\n",
     "        \n",
